[tool.poetry]
name = "pommy"
version = "0.1.0"
description = ""
authors = ["daniarlert <arlertdaniel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
textual = {extras = ["dev"], version = "^0.5.0"}


[tool.poetry.group.dev.dependencies]
commitizen = "^2.37.0"
black = {version = "^22.10.0", allow-prereleases = true}
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
