[tool.poetry]
name = "pommy"
version = "0.1.0"
description = ""
authors = ["daniarlert <arlertdaniel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^12.6.0"
click = "^8.1.3"


[tool.poetry.group.dev.dependencies]
commitizen = "^2.37.0"
black = {version = "^22.10.0", allow-prereleases = true}
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
